--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100;400;700&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css?v=1">
+    <link rel="stylesheet" href="./css/style.css?v=1">
     
 </head>
 <body>
